<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:paddingTop="@dimen/_13sdp"
    tools:context=".Activity.NotificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_15sdp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_toEndOf="@+id/img_back"
            android:fontFamily="@font/mont_regular"
            android:gravity="center|start"
            android:text="@string/notification_settings"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14sdp" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/up_curve"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/sounds"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/sound_definition"
                android:textColor="@color/string_color"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/vibrate"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:buttonTint="@color/blue"
                android:checked="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/led_light"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:buttonTint="@color/blue"
                android:checked="true" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>